fix: user details & user db
